--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
     <version>1.0-SNAPSHOT</version>
     <name>Archetype - Appium_framework</name>
     <url>http://maven.apache.org</url>
-
     <dependencies>
         <dependency>
             <groupId>io.appium</groupId>
@@ -24,6 +23,15 @@
             <version>7.11.0</version>
             <scope>test</scope>
         </dependency>
-
-    </dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.17</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.11</version>
+        </dependency>
+    </dependencies><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>16</source><target>16</target></configuration></plugin></plugins></build>
 </project>
