--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,7 @@
             <artifactId>logback-classic</artifactId>
             <version>1.4.11</version>
         </dependency>
-    </dependencies><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>16</source><target>16</target></configuration></plugin></plugins></build>
+    </dependencies><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>21</source><target>21</target>
+    <compilerArgs>--enable-preview</compilerArgs>
+</configuration></plugin></plugins></build>
 </project>
